cluster/apps/downloaders/nfs-volume.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
