cluster/apps/downloaders/transmission-vpn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-vpn
  namespace: downloaders
  labels:
    app: transmission-vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-vpn
  template:
    metadata:
      labels:
        app: transmission-vpn
    spec:
      containers:
      - name: transmission-vpn
        image: haugene/transmission-openvpn
        securityContext:
          capabilities:
            add:
              - NET_ADMIN # Required to open the local /dev/net/tun device
        volumeMounts:
        - name: config-storage
          mountPath: /config
        - name: nfs-storage
          mountPath: /data
          subPath: watch/transmission # Isolates transmission files inside /export/all/watch/transmission
        ports:
        - containerPort: 9091
          name: transmission-ui
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: transmission-config-pvc
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-all-media-pvc # The master NFS link
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-vpn-service
  namespace: downloaders
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9091
    protocol: TCP
  selector:
    app: transmission-vpn
